# senior-project

./: blade.service
autoMigrate/: BladeConst.h  CMakeLists.txt  JobDetail.h  JobPacker.cpp  Main.cpp  Node.cpp  Node.h  NodeList.cpp  NodeList.h  SlurmInterface.cpp  SlurmInterface.h  getSqueue  getSqueue.cpp
autoMigrate/src/migrator/: BladeConst.h  CMakeLists.txt  JobDetail.h  JobPacker.cpp  JobPacker.h  Migrator.cpp  Migrator.h  Node.cpp  NodeList.cpp  SlurmInterface.cpp  main.cpp
autoMigrate/src/node_control/: CMakeLists.txt  NodeControl.cpp  SlurmInterface.cpp  SlurmInterface.h
autoMigrate/src/server/: CMakeLists.txt  SendJob.cpp  SendJob.h  client.cpp  client.h  main.cpp  server.cpp  server.h
autoMigrate/src/server/include/: config.h
backend/: .gitignore  main.py  middleware.py  processor.py  requirements.txt  startServer.sh  templates.py
backend/api/: Job.py  JobDetail.py  NodeDetail.py  NodeList.py
backend/backend/: api.py  read.py
backend/process/: job.py  listnode.sh
backend/schema/: Job.py  query_generator.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: main.tsx
frontend/src/components/: Layout.tsx  Loading.tsx  NodeCard.tsx  ProtectedRoute.tsx
script/: migrate  sendJob
system/: .gitignore  CMakeLists.txt  JobManager.cpp  JobManager.h  main.cpp  pipe.sh
system/daemon/: capture_job.sh  capture_job_list.sh  count_node_state.sh  update_to_database.sh
system/data/: curr  prev
system/model/: JobModel.h
system/utils/: read.cpp  read.h
(+10 files in other folders)
